# dotenvx-rs

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo.sh  dist-workspace.toml  justfile
.github/workflows/: build.yml
src/: clap_app.rs  common.rs  dotenvx.rs  lib.rs  main.rs  master_key.rs  shims.rs
src/commands/: cloud.rs  completion.rs  crypt_util.rs  decrypt.rs  diff.rs  doctor.rs  dotenvx_cloud.rs  encrypt.rs  framework.rs  get_cmd.rs  init.rs  keypair.rs  link.rs  linter.rs  list.rs  mod.rs  model.rs  rotate.rs  run.rs  set_cmd.rs  sync.rs  verify.rs
tests/: demo.json  demo.xml  demo_test.rs  dotenvx_test.rs  ecies_test.rs
