[package]
name = "dotenvx-rs"
version = "0.3.2"
edition = "2024"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Dotenvx is a Rust command-line/library to encrypt your .env files - limiting their attack vector while retaining their benefits"
keywords = ["dotenv", "dotenvx", "secret", "vault"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/dotenvx-rs"
readme = "README.md"
homepage = "https://github.com/linux-china/dotenvx-rs"
repository = "https://github.com/linux-china/dotenvx-rs"
license = "MIT"


[[bin]]
name = "dotenvx"
path = "src/main.rs"

[dependencies]
clap = "4.5.41"
dotenvy = "0.15.7"
ecies = { version = "0.2", default-features = false, features = ["std", "aes-rust"] }
libsecp256k1 = { version = "0.7.2", default-features = false, features = ["static-context", "hmac", "sha2"] }
sha2 = "0.10"
aes-gcm = "0.10.3"
argon2 = { version = "0.5" }
rand = "0.9"
base64 = "0.22.1"
#openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
dirs = "6"
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored_json = "5"
walkdir = "2.5.0"
prettytable-rs = "^0.10"
regex = "1.11.1"
lazy_static = "1.5.0"
shlex = "1.3"
uuid = { version = "1.4", features = ["v4", "v7"] }
anyhow = "1.0.2"
rpassword = "7.4.0"
glob = "0.3"
java-properties = "2"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
testresult = "0.4.1"
