[package]
name = "dotenvx-rs"
version = "0.4.1"
edition = "2024"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Dotenvx is a Rust command-line/library to encrypt your .env files - limiting their attack vector while retaining their benefits"
keywords = ["dotenv", "dotenvx", "secret", "vault"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/dotenvx-rs"
readme = "README.md"
homepage = "https://github.com/linux-china/dotenvx-rs"
repository = "https://github.com/linux-china/dotenvx-rs"
license = "MIT"


[[bin]]
name = "dotenvx"
path = "src/main.rs"

[dependencies]
## core and encryption
dotenvy = "0.15.7"
ecies = { version = "0.2", default-features = false, features = ["std", "aes-rust"] }
libsecp256k1 = { version = "0.7.2", default-features = false, features = ["static-context", "hmac", "sha2"] }
sha2 = "0.10"
aes-gcm = "0.10.3"
argon2 = { version = "0.5" }
totp-rs = { version = "5.7", features = ["otpauth", "gen_secret"] }
rand = "0.9"
uuid = { version = "1.4", features = ["v4", "v7"] }
base64 = "0.22.1"
#openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
# cli
shlex = "1.3"
rpassword = "7.4.0"
glob = "0.3"
dirs = "6"
walkdir = "2.5.0"
clap = "4.5.41"
colored = "3.0"
prettytable-rs = "^0.10"
arboard = "3.6"
# file format
java-properties = "2"
csv = "1.3"
toml = "0.9"
yaml-rust2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored_json = "5"
#dotenv-linter = { git = "https://github.com/dotenv-linter/dotenv-linter.git", package = "dotenv-linter" }
# misc
regex = "1.11.1"
lazy_static = "1.5.0"
anyhow = "1.0.2"
reqwest = { version = "0.12.22", features = ["blocking"] }


[[bin]]
name = "mkey"
path = "src/master_key.rs"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
testresult = "0.4.1"
